# IK_Skript

./: csv_block.py  main.py  onepush.py  pyproject.toml  sample.csv  sample1.csv  sample2.csv  sample3.csv  transmittance.py  transmittance_code.py  transmittance_more.py  transmittance_more_code.py
